Add box_url parameter for pulling down remote image as suggested by @rb2k. Closes #2

--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -1,6 +1,7 @@
 VAGRANTFILE_API_VERSION='2'
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = 'precise64_cloudimg'
+  config.vm.box_url = 'http://cloud-images.ubuntu.com/precise/current/precise-server-cloudimg-vagrant-amd64-disk1.box'
   config.vm.provision :puppet do |puppet|
     puppet.manifests_path = 'manifests'
     puppet.manifest_file = 'graphite.pp'
