--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -9,5 +9,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provision :shell, path: 'setup_graphite.sh', privileged: false
   config.vm.network 'forwarded_port', guest: 80, host: 8080, auto_correct: true
+  config.vm.network 'forwarded_port', guest:8080, host:8081, auto_correct: true
   config.ssh.forward_agent = true
 end
