--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -9,4 +9,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provision :shell, path: 'setup_graphite.sh', privileged: false
   config.vm.network 'forwarded_port', guest: 80, host: 8080, auto_correct: true
   config.ssh.forward_agent = true
+  config.vm.synced_folder "../carbon_cassandra_plugin/", "/vagrant/src/carbon_cassandra_plugin"
+  config.vm.synced_folder "../graphite_cassandra_plugin/", "/vagrant/src/graphite_cassandra_plugin"
+  config.vm.synced_folder "../graphite_ceres_plugin/", "/vagrant/src/graphite_ceres_plugin"
 end
