--- a/setup/Vagrantfile
+++ b/setup/Vagrantfile
@@ -14,4 +14,5 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.synced_folder "../carbon_cassandra_plugin/", "/vagrant/src/carbon_cassandra_plugin"
   config.vm.synced_folder "../graphite_cassandra_plugin/", "/vagrant/src/graphite_cassandra_plugin"
   config.vm.synced_folder "../graphite_ceres_plugin/", "/vagrant/src/graphite_ceres_plugin"
+  config.vm.synced_folder "../../carbon/", "/vagrant/src/carbon"
 end
