use types in tsXX CF's
and use NetworkTopologyStrategy instead of simple strategy

--- a/setup/db.conf
+++ b/setup/db.conf
@@ -77,3 +77,5 @@ MAX_SLICE_GAP = 80
 
 SERVERS = 127.0.0.1:9160
 KEYSPACE = graphite
+REPLICATION_STRATEGY = NetworkTopologyStrategy
+STRATEGY_OPTIONS = {"datacenter1" : "1"}
